Todas las opciones a la parrilla

--- a/index.html
+++ b/index.html
@@ -766,7 +766,8 @@
           Se encontró un error durante la carga, refresque la página para reintentar.
         </div>
         -->
-
+         <h1 class="m1" > Suscripción
+         </h1>
         <button
           on="tap:amp-access.login-create-reader"
           class="ampstart-btn ml1 caps">
@@ -776,9 +777,11 @@
         <button
           on="tap:amp-access.login-destroy-reader"
           class="ampstart-btn ml1 caps">
-          Dejar de estar suscrito
+          Terminar 
          </button>
 
+         <h1 class="m1"> Sesión
+         </h1>
          <button
            on="tap:amp-access.login-sign-in"
            class="ampstart-btn ml1 caps">
@@ -791,8 +794,8 @@
            Cerrar Sesión
          </button>
 
-
-
+         <h1 class="m1"> Cliente
+         </h1>
 
        <!--
 
