--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
            <h1 class="m1"> Sesión
            </h1>
 
-           <button amp-access="NOT loggedIn"
+           <button amp-access="NOT loggedIn AND Subscriber"
              on="tap:amp-access.login-sign-in"
              class="ampstart-btn ml1 caps">
              Iniciar Sesión
