--- a/index.html
+++ b/index.html
@@ -768,14 +768,14 @@
         -->
            <h1 class="m1" > Suscripción
            </h1>
-          <button amp-access="NOT Subscriber"
+          <button amp-access="NOT subscriber"
             on="tap:amp-access.login-create-reader"
             class="ampstart-btn ml1 caps">
             Suscribirse
           </button>
 
 
-          <button amp-access="Subscriber"
+          <button amp-access="subscriber"
             on="tap:amp-access.login-destroy-reader"
             class="ampstart-btn ml1 caps">
             Terminar 
@@ -784,7 +784,7 @@
            <h1 class="m1"> Sesión
            </h1>
 
-           <button amp-access="NOT loggedIn AND Subscriber"
+           <button amp-access="NOT loggedIn AND subscriber"
              on="tap:amp-access.login-sign-in"
              class="ampstart-btn ml1 caps">
              Iniciar Sesión
