--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
           </template>
         -->
 
-	  <div amp-acess="Subscriber AND loggedIn"
+	  <div amp-acess="subscriber AND loggedIn"
             class = 'stepper vertical' >
 	    <div  
               [hidden]='currentStep > 0'>
@@ -940,7 +940,7 @@
 
 		  <div class='flex flex-wrap mxn2'>
 		    <button [disabled]='contactoSelected' 
-		      type='submit'>Suscribirse</button>
+		      type='submit'>Registrarse</button>
 		  </div>
 
 		  <div submit-success=''>
