--- a/index.html
+++ b/index.html
@@ -829,9 +829,9 @@
           </template>
         -->
 
-	  <div amp-acess="subscriber AND loggedIn"
+	  <div amp-access="subscriber AND loggedIn"
             class = 'stepper vertical' >
-	    <div amp-acess="subscriber AND loggedIn"
+	    <div amp-access="subscriber AND loggedIn"
               [hidden]='currentStep > 0'>
 	      <div class='clearfix content'>
 	        <span  
